Fix broken variable, and hide overlapping voice channel green bar when connected
This fixes variable of hovering over a channel and expecting the background to turn light gray, and also hides the overlapping green bar that appears when a voice chat is active in a server's channel list.

--- a/src/source.css
+++ b/src/source.css
@@ -164,3 +164,6 @@
 .channel__972a0 .interactive_bf202d {
   background: transparent;
 }
+.voiceChannelHighlightBorder_c69b6d, .voiceChannelHighlightGlow_c69b6d {
+  display: none;
+}
